# IEEE-2030.5-Client

./: CMakeLists.txt  address.c  bsd.c  c_gen.c  client.c  client_test.c  connection.c  csip_test.c  der.c  der_client.c  dnssd_client.c  doc_gen.c  event.c  exi_output.c  exi_parse.c  file.c  hash.c  http.c  http_parse.c  list.c  list_util.c  mdns.c  metering.c  named.c  openssl.c  output.c  pack.c  parse.c  platform.c  query.c  queue.c  resource.c  retrieve.c  schedule.c  schema.c  schema_gen.c  se_connection.c  se_core.c  se_core.h  se_discover.c  (+19 more)
docs/: Software.Manual.-.EPRI.IEEE.2030.5.Client.docx
linux/: event.c  file.c  interface.c  platform.c  tcp.c  time.c  timer.c  udp.c
test/: tcp_test.c
